[package]
name = "discord_user_checker"
version = "0.1.0"
authors = ["mart368b <martinpinholt@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
serenity = "0.8.6"
reqwest = "0.10.6"
futures = "0.3.5"
base64 = "0.12.3"
tokio = "0.2.21"
log = "0.4.11"
env_logger = "0.7.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"